--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-scikit-learn==1.3.0
-matplotlib==3.7.2
-nltk==3.8.1
-pandas==2.2.2
-seaborn==0.13.2
+scikit-learn
+matplotlib
+nltk
+pandas
+seaborn
